Compiler/tests/good/var1.nx
val x : int = 3;

printn(42);
