Compiler/tests/bad/function2.nx
function somar(x : int, x : int) : int
{
    return 3;
}